--- a/orarend.html
+++ b/orarend.html
@@ -26,8 +26,8 @@
         }
 
         body {
-            background-color: #f4f4f4;
-            font-family: Arial, sans-serif;
+            font-family: 'Times New Roman', Times, serif;
+            color: black;
         }
 
         .orarend {
@@ -38,18 +38,18 @@
 
         .orarend th,
         .orarend td {
-            border: 1px solid #ccc;
+            border: 1px solid black;
             padding: 10px;
             text-align: center;
         }
 
         .orarend th {
-            background-color: #333;
-            color: #fff;
+            background-color: black;
+            color: gray;
         }
 
         .orarend td {
-            background-color: #fff;
+            background-color: lightgray;
         }
 
         .orarend td:not(:first-child),
@@ -59,13 +59,13 @@
         }
 
         .orarend th {
-            background-color: #333;
-            color: #fff;
+            background-color: gray;
+            color: white;
             font-weight: bold;
         }
 
         .orarend tbody tr:nth-child(odd) {
-            background-color: #f2f2f2;
+            background-color: black;
         }
     </style>
     <table class="orarend" style="width:100%">
@@ -81,72 +81,72 @@
         <tr>
             <th>0.</th>
             <td>7:15 - 8:00</td>
-            <td>IKT projektmunka</td>
+            <td>IKT projektmunka <br> (Paár Norbert 203)</td>
             <td></td>
-            <td>Testnevelés</td>
-            <td>Matematika</td>
-            <td>Történelem</td>
+            <td>Testnevelés <br> (Nagy Tibor tornaterem)</td>
+            <td>Matematika <br> (Dr Takácsné Menyhért Éva Judit 103)</td>
+            <td>Történelem <br> (Takács Gábor 103)</td>
         </tr>
         <tr>
             <th>1.</th>
             <td>8:00 - 8:45</td>
-            <td>IKT projektmunka</td>
-            <td>Webprogramozás</td>
-            <td>Testnevelés</td>
-            <td>Matematika</td>
-            <td>Angol nyelv</td>
+            <td>IKT projektmunka <br> (Paár Norbert 203)</td>
+            <td>Webprogramozás <br> (Németh Bence 203)</td>
+            <td>Testnevelés <br> (Nagy Tibor tornaterem)</td>
+            <td>Matematika <br> (Dr Takácsné Menyhért Éva Judit 103)</td>
+            <td>Angol nyelv <br> (Almásiné Jobbágy Nóra Katalin 212)</td>
         </tr>
         <tr>
             <th>2.</th>
             <td>8:55 - 9:40</td>
-            <td>IKT projektmunka</td>
-            <td>Webprogramozás</td>
-            <td>Angol nyelv</td>
-            <td>Osztályfőnöki</td>
-            <td>Matematika</td>
+            <td>IKT projektmunka <br> (Paár Norbert 203)</td>
+            <td>Webprogramozás <br> (Németh Bence 203)</td>
+            <td>Angol nyelv <br> (Almásiné Jobbágy Nóra Katalin 212)</td>
+            <td>Osztályfőnöki <br> (Dr Takácsné Menyhért Éva Judit 103)</td>
+            <td>Matematika <br> (Dr Takácsné Menyhért Éva Judit 103)</td>
         </tr>
         <tr>
             <th>3.</th>
             <td>9:50 - 10:35</td>
-            <td>Szakmai angol</td>
-            <td>Webprogramozás</td>
-            <td>Angol nyelv</td>
-            <td>Magyar nyelv és irodalom</td>
-            <td>Matematika</td>
+            <td>Szakmai angol <br> (Almásiné Jobbágy Nóra Katalin 212)</td>
+            <td>Webprogramozás <br> (Németh Bence 203)</td>
+            <td>Angol nyelv <br> (Almásiné Jobbágy Nóra Katalin 212)</td>
+            <td>Magyar nyelv és irodalom <br> (Szalma Anna Mária 103)</td>
+            <td>Matematika <br> (Dr Takácsné Menyhért Éva Judit 103)</td>
         </tr>
         <tr>
             <th>4.</th>
             <td>10:45 - 11:30</td>
-            <td>Szakmai angol</td>
-            <td>Asztali alkalmazások</td>
-            <td>Történelem</td>
-            <td>Magyar nyelv és irodalom</td>
-            <td>Magyar nyelv és irodalom</td>
+            <td>Szakmai angol <br> (Almásiné Jobbágy Nóra Katalin 212)</td>
+            <td>Asztali alkalmazások <br> (Paár Norbert 113)</td>
+            <td>Történelem <br> (Takács Gábor 103)</td>
+            <td>Magyar nyelv és irodalom <br> (Szalma Anna Mária 103)</td>
+            <td>Magyar nyelv és irodalom <br> (Szalma Anna Mária 103)</td>
         </tr>
         <tr>
             <th>5.</th>
             <td>11:40 - 12:25</td>
-            <td>Adatbázis kezelés</td>
-            <td>Asztali alkalmazások</td>
-            <td>Állampolgári ismeretek</td>
-            <td>Angol nyelv</td>
-            <td>Testnevelés</td>
+            <td>Adatbázis kezelés <br> (Takács István 301)</td>
+            <td>Asztali alkalmazások <br> (Paár Norbert 113)</td>
+            <td>Állampolgári ismeretek <br> (Takács Gábor 103)</td>
+            <td>Angol nyelv <br> (Almásiné Jobbágy Nóra Katalin 212)</td>
+            <td>Testnevelés <br> (Nagy Tibor tornaterem)</td>
         </tr>
         <tr>
             <th>6.</th>
             <td>12:45 - 13:30</td>
-            <td>Szoftvertesztelés</td>
-            <td>Asztali alkalmazások</td>
-            <td>Magyar nyelv és irodalom</td>
+            <td>Szoftvertesztelés <br> (Szilágyi Bertalan 203)</td>
+            <td>Asztali alkalmazások <br> (Paár Norbert 113)</td>
+            <td>Magyar nyelv és irodalom <br> (Szalma Anna Mária 103)</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <th>7.</th>
             <td>13:35 - 14:20</td>
-            <td>Szoftvertesztelés</td>
+            <td>Szoftvertesztelés <br> (Szilágyi Bertalan 203)</td>
             <td></td>
-            <td>Matematika</td>
+            <td>Matematika <br> (Dr Takácsné Menyhért Éva Judit 103)</td>
             <td></td>
             <td></td>
         </tr>
